# pinexplore

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/hooks/: approve-bash.sh
.claude/skills/describe/: SKILL.md
docs/: AGENTS.src.md  Explore.md  PindataScripts.md  WebCache.md  draft_theme_hierarchy.md
scripts/: apply_descriptions.py  bootstrap  check_sql.py  parse_ipdb_glossary.py  parse_kineticist_glossary.py  parse_pinball_primer_glossary.py  pull_ingest_sources.py  push_ingest_sources.py  rebuild_explore.py
scripts/agent_docs/: build_agent_docs.py  check_agent_docs_edit.sh
scripts/cloud_store/: pull_ingest_sources.py  push_ingest_sources.py
scripts/glossary/: parse_ipdb_glossary.py  parse_kineticist_glossary.py  parse_pinball_primer_glossary.py
scripts/web_scrape/: web_cache.py  web_extract.py  web_fetch.py  web_http.py  web_render.py
scripts/web_scrape/content_types/: __init__.py  base.py  html.py  pdf.py
sql/: 01_reference.sql  02_raw.sql  03_raw_web.sql  03_staging.sql  04_checks.sql  04_error_checks.sql  04_staging.sql  05_compare.sql  05_error_checks.sql  05_warning_checks.sql  06_compare.sql  06_gaps.sql  06_warning_checks.sql  07_compare.sql  07_gaps.sql  07_quality.sql  08_gaps.sql  08_popularity.sql  08_quality.sql  09_quality.sql  10_popularity.sql  10_print_warnings.sql  11_history.sql  explore.sql
tests/: conftest.py  test_content_types.py  test_web_cache.py  test_web_extract.py  test_web_fetch.py  test_web_http.py  test_web_render.py
