[project]
name = "pinexplore"
version = "0.1.0"
description = "DuckDB-based exploration and validation tool for pinball catalog data"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.72",
    "charset-normalizer>=3.4.0",
    "duckdb>=1.5.0",
    "htmldate>=1.10.0",
    "playwright>=1.49.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "trafilatura>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
    "boto3-stubs[s3]>=1.42.72",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Stricter than the sister flipcommons project: it selects only ANN401, we run
# the full ANN family so the linter also enforces complete annotations.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "DTZ",    # flake8-datetimez (naive datetime bugs)
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PGH",    # pygrep-hooks (blanket noqa/type-ignore)
    "ISC",    # flake8-implicit-str-concat
    "ANN",    # flake8-annotations — require full annotations (stricter than flipcommons)
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "FURB",   # refurb (modernization)
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line too long — handled by formatter
    "S101",   # Use of assert — okay in tests (also per-file-ignored below)
    "S311",   # Use of random — not cryptographic in this app
    "PT019",  # Underscore-prefix fixtures are the pytest idiom for side-effect-only fixtures
    "ISC001", # Conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S106", "S603", "S607", "ANN"]  # asserts, test creds, subprocess, untyped tests
"tests/conftest.py" = ["S101", "ANN"]
"scripts/**/*.py" = ["T201"]  # CLI scripts legitimately print
# The web transport's entire purpose is opening arbitrary user-supplied web URLs;
# the http/https scheme is enforced in fetch_one() before _http_get is ever called.
"scripts/web_scrape/web_http.py" = ["S310"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
# The web-scrape modules are flat scripts imported by basename (web_cache,
# web_fetch) via a sys.path insert at runtime; put their dir on mypy_path so
# those imports resolve from the tests too, not just from sibling modules.
mypy_path = "scripts/web_scrape"
# Beyond `strict` — flipcommons stops at strict=true; these are the aggressive
# flags strict deliberately leaves off.
warn_unreachable = true
extra_checks = true
warn_unused_ignores = true
warn_redundant_casts = true
enable_error_code = [
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "explicit-override",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]
exclude = [
    "\\.venv/",
    "ingest_sources/",
]

[[tool.mypy.overrides]]
# Tests favor readability over exhaustive annotation. `tests/` is a package
# (tests/__init__.py) so `tests.*` matches under both `mypy .` and a per-file
# IDE check — unlike `exclude`, which mypy ignores for explicitly-passed paths.
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["trafilatura", "trafilatura.*", "htmldate", "slugify", "playwright.*"]
ignore_missing_imports = true
